--- a/05-JavaScript in the Browser-DOM and Events[PROJECT]/styles.css
+++ b/05-JavaScript in the Browser-DOM and Events[PROJECT]/styles.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-  font-family: "Press Start 2P", sans-serif;
+  font-family: 'Press Start 2P', sans-serif;
   color: #eee;
   background-color: #222;
   /* background-color: #60b347; */
